[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/game/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.7997, 37.4616 )

[node name="Enemy" type="PathFollow2D"]
rotate = false
script = ExtResource( 2 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Area"]
modulate = Color( 1, 0.427451, 0.427451, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="ShootStartTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="ShootStartTimer" to="." method="_on_ShootStartTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
